[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/wavicle.gd" type="Script" id=1]
[ext_resource path="res://Sprites/wave.png" type="Texture" id=2]
[ext_resource path="res://Sprites/particle.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 4.0

[node name="wavicle" type="RigidBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="particle" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="wave" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="particle_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="wave_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -5, -5, 10, 10 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_screen_exited"]
